# sevi

./: Cargo.toml
src/: arg_parser.rs  hello_world.rs  main.rs  model.rs  pane.rs
src/components/: buffer.rs  input.rs  mod.rs  status_bar.rs
src/lsp/: mod.rs
src/models/: cursor.rs  help.rs  key.rs  mod.rs  status_bar.rs  text_buffer.rs
src/models/file/: buffer.rs  cursor.rs  file.rs  mod.rs
src/models/lsp/: capabilities.rs  completion.rs  diagnostic.rs  documentation.rs  location.rs  mod.rs  semantic_tokens.rs
src/models/mode/: command.rs  insert.rs  mirror.rs  mod.rs  normal.rs  pair.rs  search.rs  selection.rs
src/models/pane/: mod.rs  text.rs
src/models/settings/: colors.rs  editor_settings.rs  mod.rs  mode_keybindings.rs
src/models/style/: color.rs  mod.rs  text_modifier.rs
src/threads/: mod.rs
src/threads/lsp/: mod.rs
src/threads/registers/: mod.rs
src/widgets/: editor.rs  mod.rs  reflow.rs
