[package]
name = "sevi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crop = "0.3.0"
crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tuirealm = { version = "1.9.0", features = ["derive", "ratatui", "crossterm"] }
tui-realm-stdlib = "1.3.0"
