[package]
name = "sevi"
version = "0.8.0"
edition = "2021"

#[[bin]]
#name = "sevig"
#path = "src/gui/main.rs"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crop = "0.3.0"
arboard = { version = "3.2.1", features = ["wayland-data-control"] }
#crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tuirealm = { version = "1.9.0", features = ["derive", "ratatui", "crossterm"] }
tui-realm-stdlib = "1.3.0"
#iced = "0.10.0"
bitflags = "2.4.0"
either = "1.9.0"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.11"
xdg = "2.5.2"
toml = "0.7.6"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
clap = { version = "4.4.6", features = ["derive"] }

tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-c = "0.20.6"
tree-sitter-cpp = "0.20.3"
tree-sitter-python = "0.20.4"
tree-sitter-java = "0.20.0"
tree-sitter-commonlisp = "0.3.1"
tree-sitter-swift = "0.3.6"
tree-sitter-go = "0.20.0"
tree-sitter-bash = "0.20.3"
tree-sitter-javascript = "0.20.1"
tree-sitter-c-sharp = "0.20.0"
